so many changes for invitation

--- a/src/scss/blocks/_button.scss
+++ b/src/scss/blocks/_button.scss
@@ -5,6 +5,7 @@
     letter-spacing: 0.03ch;
     border-radius: 2rem;
     padding: 1.4em 1em;
+    text-align: center;
   
     @include button-base-styles();
   }
