--- a/src/scss/compositions/_wrapper.scss
+++ b/src/scss/compositions/_wrapper.scss
@@ -1,6 +1,8 @@
 
 .wrapper {
     margin-inline: auto;
+    margin-left: auto;
+    margin-right: auto;
     width: 1000px;
     width: clamp(16rem, 95vw, 85rem);
     position: relative;
