--- a/src/scss/kurva.scss
+++ b/src/scss/kurva.scss
@@ -199,6 +199,7 @@ pre > code {
 @import 'blocks/prose';
 @import 'blocks/site-footer';
 @import 'blocks/site-header';
+@import 'blocks/carousel';
 
 @import 'web-components/kurva-tabs';
 @import 'web-components/web-navigation-drawer';
