--- a/src/site/_includes/partials/ucapan-form.njk
+++ b/src/site/_includes/partials/ucapan-form.njk
@@ -1,11 +1,11 @@
 
 <ucapan-box>
 <div class="wrapper">
-    <h2 class="ucapin__message gap-top-size-1">Kartu Ucapan</h2>
+    <h2 class="ucapin__message gap-top-size-1">Kirim Ucapan</h2>
     <form class="flow gap-top-size-1" method="post">
         <div>
             <label class="visually-hidden" for="sub-firstname">Tulis nama</label>
-            <input id="sub-firstname" name="FirstName" placeholder="nama kamu" required
+            <input id="sub-firstname" name="FirstName" placeholder="Tulis nama" required
             type="text" />
         </div>
         <div>
