--- a/src/scss/web-components/_web-navigation-drawer.scss
+++ b/src/scss/web-components/_web-navigation-drawer.scss
@@ -48,6 +48,7 @@ web-navigation-drawer {
     background: rgb(0 0 0 / 40%);
     backdrop-filter: blur(5px);
     opacity: 0;
+    margin-top: 0;
     // transition: opacity $TRANSITION_SPEED cubic-bezier(.4, 0, .2, 1);
   }
   
