--- a/src/site/content/invitation/index.njk
+++ b/src/site/content/invitation/index.njk
@@ -2,7 +2,7 @@
 layout: layouts/restrict-page.njk
 permalink: /{{ paged.url }}index.html
 title: The Weeding of Rima and Ilman
-thumbnail: 'https://kurva.xyz/images/rm/cover-5-og.jpg'
+thumbnail: 'https://kurva.xyz/images/rm/cover-6-og.jpg'
 alt: Picture of The Weeding of Rima and Ilman
 renderData:
     title: "{{ paged.title }}"
@@ -42,7 +42,7 @@ pagination:
             <h2>Kepada Yth:</h2>
             <h2 class="guest-name">{{ paged.data.namaUndangan }}</h2>
             <button data-drawer-close-button id="open-invitation">
-                <div style="display: flex; flex-direction: row; align-items: center; gap: 5px; justify-content: center;">
+                <div style="display: flex; flex-direction: row; align-items: center; gap: 1rem; margin-right: 10px; justify-content: center;">
                     <img alt="email-icon" src="/images/email.svg"></img>
                     <h2>Open Invitation</h2>
                 </div>
@@ -117,14 +117,14 @@ pagination:
         <div class="flow">
             <h1>Ilman Nur Syamsudin, S.P</h1>
             <h2>Putra dari</h2>
-            <p>Alm. Drs. Dicky Akhmaf Haidir dan Enung Nurani<p>
+            <p>Alm. Drs. Dicky Akhmad Haidir dan Enung Nurani<p>
         </div>
         </div>
         <img class="bunga-border" alt="Bunga Line Footer" src="/images/feeds/bunga-line-footer.png"></img>
     </div>
     <div id="undangan-event" class="wrapper invite-center region tag">
         <h3>Rangkaian Acara akan diselenggarakan pada:</h3>
-        <div id="undangan-date" class="repel region">
+        <div id="undangan-date" class="auto-grid region">
             <h1 id="date-day">Minggu</h1>
             <div id="date-flex"><h1 id="date-month">7</h1><h1 id="date-month">Agustus</h1></div>
             <h1 id="date-year">2022</h1>
@@ -135,7 +135,7 @@ pagination:
                 <h3>Pukul 10.00 WIB</h3>
             </div>
             <div class="weeding-location invite-center">
-                <img alt="Location Icon" src="/images/feeds/location-icon.png"></img>
+                <img style="filter: invert(90%) sepia(64%) saturate(1409%) hue-rotate(315deg) brightness(100%) contrast(95%);" alt="Location Icon" src="/images/location.svg"></img>
                 <h3 class="event-value">Lokasi Acara</h3>
                 <h3>Serela Riau Bandung Hotel</h3>
                 <p>Jl. L. L. R.E. Martadinata No.56, Citarum, Kec. Bandung Wetan, Kota Bandung, Jawa Barat 40115</p>
@@ -185,12 +185,12 @@ pagination:
                 <img class="card-couple" src="/images/rm/cover-3.jpg"></img>
                 <img class="card-couple" src="/images/rm/cover-4.jpg"></img>
                 <img class="card-couple" src="/images/rm/cover-2.jpg"></img>
-                <img class="card-couple" src="/images/rm/cover-1.jpg"></img>
+                <img class="card-couple" src="/images/rm/cover-5-og.jpg"></img>
             </div>
             </div>
         </web-carousel>
         <div class="region">
-        <h3>Atas kehadiran dan doa restu dari Bapak/Ibu/Saudara/i sekalian kami mengucapkan Terima Kasih</h3>
+        <h3>Atas kehadiran dan doa restu dari Bapak/Ibu/Saudara/i sekalian kami mengucapkan terima kasih</h3>
         <p>Wassalamualaikum Warahmatullahi Wabarakatuh</p>
         <h3>KAMI YANG BERBAHAGIA</h3>
         </div>
