--- a/src/site/content/invitation/index.njk
+++ b/src/site/content/invitation/index.njk
@@ -23,7 +23,7 @@ pagination:
 <div class="invite">
 <web-navigation-drawer type="standard">
     <audio id="bg-sound" class="audio__element" autoplay preload="auto">
-    <source src="{{ helpers.hashForProd('/audio/nothing-gonna-change-my-love.mp3') }}" type="audio/mpeg">
+    <source src="{{ helpers.hashForProd('/audio/nothing-gonna-change-modern.mp3') }}" type="audio/mpeg">
     </audio>    
     <div data-drawer-container class="invite-center w-stack">
         <div id="undangan-background">
@@ -140,7 +140,7 @@ pagination:
                 <h3>Serela Riau Bandung Hotel</h3>
                 <p>Jl. L. L. R.E. Martadinata No.56, Citarum, Kec. Bandung Wetan, Kota Bandung, Jawa Barat 40115</p>
                 <a target="_blank" href="https://goo.gl/maps/Cv2uJUcrH6eW7K9C9">
-                <div id="open-location">
+                <div class="golden-button" id="open-location">
                     <h2>Menuju lokasi</h2>
                 </div>
                 </a>
@@ -189,10 +189,12 @@ pagination:
             </div>
             </div>
         </web-carousel>
-        <div class="region">
-        <h3>Atas kehadiran dan doa restu dari Bapak/Ibu/Saudara/i sekalian kami mengucapkan terima kasih</h3>
-        <p>Wassalamualaikum Warahmatullahi Wabarakatuh</p>
-        <h3>KAMI YANG BERBAHAGIA</h3>
+        <div id="virtual-wedding" class="region">
+            <h2>VIRTUAL WEDDING</h2>
+            <h3>Mengingat pandemi covid-19, kami tidak dapat mengundang seluruh sahabat tercinta kami secara langsung, karena penting bagi kami untuk menjaga semuanya agar tetap aman, jadi selain acara secara langsung, kami juga berencana untuk mempublikasikan pernikahan kami secara virtual melalui live instagram dan youtube yang bisa anda ikuti melalui link berikut :</h3>
+            <a class="golden-button" id="instagram-link" target="_blank" href="https://instagram.com"><h2>INSTAGRAM LIVE</h2></a>
+            <p>Wassalamualaikum Warahmatullahi Wabarakatuh</p>
+            <h3>KAMI YANG BERBAHAGIA</h3>
         </div>
         <img alt="Rima Ilman Logo" id="rima-ilham-logo" src="/images/rm/rima-ilham-logo.png"></img>
         {# Side Flower Image #}
