--- a/src/site/content/rimailmanwedding/virtual/index.njk
+++ b/src/site/content/rimailmanwedding/virtual/index.njk
@@ -1,7 +1,7 @@
 ---
 layout: layouts/restrict-page.njk
-permalink: /{{ paged.url }}index.html
 title: The Weeding of Rima and Ilman
+description: The Weeding of Rima and Ilman
 thumbnail: 'https://kurva.xyz/images/rm/cover-6-og.jpg'
 alt: Picture of The Weeding of Rima and Ilman
 renderData:
@@ -9,12 +9,6 @@ renderData:
     description: "{{ paged.description }}"
 pageScripts:
     - '/js/invitation-page.js'
-pagination:
-  data: collections.invitations
-  size: 1
-  alias: paged
-  resolve: values
-  addAllPagesToCollections: true
 ---
 
 {% include "partials/transition-scroll.njk" %}
@@ -39,8 +33,7 @@ pagination:
                 <img alt="Rima Ilman Logo" src="/images/rm/rima-ilham-logo.png"></img>
             </div>
             <div class="region">
-            <h2>Kepada Yth:</h2>
-            <h2 class="guest-name">{{ paged.data.namaUndangan }}</h2>
+            {# <h2 class="guest-name">{{ paged.data.namaUndangan }}</h2> #}
             <button data-drawer-close-button id="open-invitation">
                 <div style="display: flex; flex-direction: row; align-items: center; gap: 1rem; margin-right: 10px; justify-content: center;">
                     <img alt="email-icon" src="/images/email.svg"></img>
@@ -189,31 +182,16 @@ pagination:
             </div>
             </div>
         </web-carousel>
-        <div class="region">
-        <h3>Atas kehadiran dan doa restu dari Bapak/Ibu/Saudara/i sekalian kami mengucapkan terima kasih</h3>
-        <p>Wassalamualaikum Warahmatullahi Wabarakatuh</p>
-        <h3>KAMI YANG BERBAHAGIA</h3>
+        <div id="virtual-wedding" class="region">
+            <h2>VIRTUAL WEDDING</h2>
+            <h3>Mengingat pandemi covid-19, kami tidak dapat mengundang seluruh sahabat tercinta kami secara langsung, karena penting bagi kami untuk menjaga semuanya agar tetap aman, jadi selain acara secara langsung, kami juga berencana untuk mempublikasikan pernikahan kami secara virtual melalui live instagram dan youtube yang bisa anda ikuti melalui link berikut :</h3>
+            <a class="golden-button" id="instagram-link" target="_blank" href="https://www.instagram.com/syamnurilman/"><div style="display: flex; flex-direction: row; align-items: center; gap: 1rem; margin-right: 10px; justify-content: center;"><img alt="Instagram" src="/images/iglogo.svg"></img><h3>Live Instagram (Ilman)</h3></div></a>
+            <a class="golden-button" id="instagram-link" target="_blank" href="https://www.instagram.com/rimanuzla/?igshid=YmMyMTA2M2Y="><div style="display: flex; flex-direction: row; align-items: center; gap: 1rem; margin-right: 10px; justify-content: center;"><img alt="Instagram" src="/images/iglogo.svg"></img><h3>Live Instagram (Rima)</h3></div></a>
+            {# <p>Wassalamualaikum Warahmatullahi Wabarakatuh</p> #}
+            {# <h3>KAMI YANG BERBAHAGIA</h3> #}
+        </div>
         <img alt="Rima Ilman Logo" id="rima-ilham-logo" src="/images/rm/rima-ilham-logo.png"></img>
-        {# Side Flower Image #}
-        {# <div class="flower-frame repel">
-            <img id="reverse" alt="Bunga Frame Left" src="/images/feeds/bunga-frame.png"></img>
-            <img alt="Bunga Frame Right" src="/images/feeds/bunga-frame.png"></img>
-        </div> #}
     </div>
 </div>
 </main>
 </div>
-
-            {# <button class="icon-button" data-direction="prev" aria-label="back">
-                                <?xml version="1.0" encoding="utf-8"?>
-                <!-- Generator: Adobe Illustrator 24.0.3, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-                <svg version="1.1" id="icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                    width="32px" height="32px" viewBox="0 0 32 32" style="enable-background:new 0 0 32 32;" xml:space="preserve">
-                <style type="text/css">
-                    .st0{fill:none;}
-                </style>
-                <title>caret--right</title>
-                <polygon points="20,24 10,16 20,8 "/>
-                <rect class="st0" width="32" height="32"/>
-                </svg>
-            </button> #}
