--- a/src/site/content/rimailmanwedding/virtual/index.njk
+++ b/src/site/content/rimailmanwedding/virtual/index.njk
@@ -124,6 +124,14 @@ pageScripts:
         </div>
         <div id="akad-nikah" class="region w-stack tag">
             <div class="weeding-date invite-center w-stack">
+                <div id="virtual-wedding" class="region">
+            <h3>Virtual Wedding</h3>
+            <p>Mengingat pandemi covid-19, kami tidak dapat mengundang seluruh sahabat tercinta kami secara langsung, karena penting bagi kami untuk menjaga semuanya agar tetap aman, jadi selain acara secara langsung, kami juga berencana untuk mempublikasikan pernikahan kami secara virtual melalui live instagram yang bisa anda ikuti melalui link berikut :</p>
+            <a class="golden-button" id="instagram-link" target="_blank" href="https://www.instagram.com/syamnurilman/"><div style="display: flex; flex-direction: row; align-items: center; gap: 1rem; margin-right: 10px; justify-content: center;"><img alt="Instagram" src="/images/iglogo.svg"></img><p>Live Instagram (Ilman)</p></div></a>
+            <a class="golden-button" id="instagram-link" target="_blank" href="https://www.instagram.com/rimanuzla/?igshid=YmMyMTA2M2Y="><div style="display: flex; flex-direction: row; align-items: center; gap: 1rem; margin-right: 10px; justify-content: center;"><img alt="Instagram" src="/images/iglogo.svg"></img><p>Live Instagram (Rima)</p></div></a>
+            {# <p>Wassalamualaikum Warahmatullahi Wabarakatuh</p> #}
+            {# <h3>KAMI YANG BERBAHAGIA</h3> #}
+        </div>
                 <img style="filter: invert(90%) sepia(64%) saturate(1409%) hue-rotate(315deg) brightness(100%) contrast(95%);" alt="Calendar Icon" src="/images/time.svg"></img>
                 <h3>Pukul 10.00 WIB</h3>
             </div>
@@ -182,13 +190,8 @@ pageScripts:
             </div>
             </div>
         </web-carousel>
-        <div id="virtual-wedding" class="region">
-            <h2>VIRTUAL WEDDING</h2>
-            <h3>Mengingat pandemi covid-19, kami tidak dapat mengundang seluruh sahabat tercinta kami secara langsung, karena penting bagi kami untuk menjaga semuanya agar tetap aman, jadi selain acara secara langsung, kami juga berencana untuk mempublikasikan pernikahan kami secara virtual melalui live instagram dan youtube yang bisa anda ikuti melalui link berikut :</h3>
-            <a class="golden-button" id="instagram-link" target="_blank" href="https://www.instagram.com/syamnurilman/"><div style="display: flex; flex-direction: row; align-items: center; gap: 1rem; margin-right: 10px; justify-content: center;"><img alt="Instagram" src="/images/iglogo.svg"></img><h3>Live Instagram (Ilman)</h3></div></a>
-            <a class="golden-button" id="instagram-link" target="_blank" href="https://www.instagram.com/rimanuzla/?igshid=YmMyMTA2M2Y="><div style="display: flex; flex-direction: row; align-items: center; gap: 1rem; margin-right: 10px; justify-content: center;"><img alt="Instagram" src="/images/iglogo.svg"></img><h3>Live Instagram (Rima)</h3></div></a>
-            {# <p>Wassalamualaikum Warahmatullahi Wabarakatuh</p> #}
-            {# <h3>KAMI YANG BERBAHAGIA</h3> #}
+        <div class="region">
+        <h3>KAMI YANG BERBAHAGIA</h3>
         </div>
         <img alt="Rima Ilman Logo" id="rima-ilham-logo" src="/images/rm/rima-ilham-logo.png"></img>
     </div>
