--- a/src/site/content/invitation/index.njk
+++ b/src/site/content/invitation/index.njk
@@ -189,11 +189,38 @@ pagination:
             </div>
             </div>
         </web-carousel>
+        <div id="list-mengundang" class="region">
+            <h1>Turut Mengundang</h1>
+            <div class="region" id="pihak-laki-laki">
+                <h2>Pihak Laki Laki</h2>
+                <p>Keluarga Besar Apa Udin Syamsudin/ Mih Oom Komariah</p>
+                <p>Keluarga Besar Aki Salim / Nene Idah</p>
+                <p>Keluarga Besar Dinas Pertanian / Ketahanan Pangan Kabupaten Karawang</p>
+                <p>Gilang Rahmat Pratama / Rahma (Kakak)</p>
+                <p>Reza Suwardi (Adik)</p>
+                <p>Fadly Ahmad Fadhillah (Adik)</p>
+            </div>
+            <div class="region" id="pihak-perempuan">
+                <h2>Pihak Perempuan</h2>
+                <p>Masnisjar / Khamidar (Mak Dang / Mak Tuo)</p>
+                <p>Nuraini / Darwin (Ibu / Pak Dang)</p>
+                <p>Musniar / Idramayulis ( Tante / Om )</p>
+                <p>Musri / Fitriani ( Mak Etek / Tante )</p>
+                <p>Erizal (Pak Tuo) </p>
+                <p>Nelfiani / Adriwita (Etek / Om)</p>
+                <p>Abdianul Haiqal / Kanigia Inderasty (Kakak)</p>
+                <p>Rinda Nuzla Rahmi / Ahmad Irfan (Kakak)</p>
+                <p>Ilna Nuzla Putri (Adik)</p>
+                <p>Ninik Mamak</p>
+                <p>Urang Sumando / Seluruh Sanak Keluarga</p>
+            </div>
+        </div>
         <div class="region">
-        <h3>Atas kehadiran dan doa restu dari Bapak/Ibu/Saudara/i sekalian kami mengucapkan terima kasih</h3>
-        <p>Wassalamualaikum Warahmatullahi Wabarakatuh</p>
-        <h3>KAMI YANG BERBAHAGIA</h3>
-        <img alt="Rima Ilman Logo" id="rima-ilham-logo" src="/images/rm/rima-ilham-logo.png"></img>
+            <h3>Atas kehadiran dan doa restu dari Bapak/Ibu/Saudara/i sekalian kami mengucapkan terima kasih</h3>
+            <p>Wassalamualaikum Warahmatullahi Wabarakatuh</p>
+            <h3>KAMI YANG BERBAHAGIA</h3>
+            <img alt="Rima Ilman Logo" id="rima-ilham-logo" src="/images/rm/rima-ilham-logo.png"></img>
+        </div>
         {# Side Flower Image #}
         {# <div class="flower-frame repel">
             <img id="reverse" alt="Bunga Frame Left" src="/images/feeds/bunga-frame.png"></img>
