--- a/src/site/content/invitation/index.njk
+++ b/src/site/content/invitation/index.njk
@@ -190,13 +190,13 @@ pagination:
             </div>
         </web-carousel>
         <div id="list-mengundang" class="region">
-            <h1>Turut Mengundang</h1>
+            <h1>TURUT MENGUNDANG</h1>
             <div class="region" id="pihak-laki-laki">
                 <h2>Pihak Laki Laki</h2>
                 <p>Keluarga Besar Apa Udin Syamsudin/ Mih Oom Komariah</p>
                 <p>Keluarga Besar Aki Salim / Nene Idah</p>
                 <p>Keluarga Besar Dinas Pertanian / Ketahanan Pangan Kabupaten Karawang</p>
-                <p>Gilang Rahmat Pratama / Rahma (Kakak)</p>
+                <p>Gilang Rahmat Pratama / Laili Lutfiatur Rahma (Kakak)</p>
                 <p>Reza Suwardi (Adik)</p>
                 <p>Fadly Ahmad Fadhillah (Adik)</p>
             </div>
@@ -208,6 +208,7 @@ pagination:
                 <p>Musri / Fitriani ( Mak Etek / Tante )</p>
                 <p>Erizal (Pak Tuo) </p>
                 <p>Nelfiani / Adriwita (Etek / Om)</p>
+                <p>Keluarga Besar BSI KCP Karawang</p>
                 <p>Abdianul Haiqal / Kanigia Inderasty (Kakak)</p>
                 <p>Rinda Nuzla Rahmi / Ahmad Irfan (Kakak)</p>
                 <p>Ilna Nuzla Putri (Adik)</p>
@@ -219,7 +220,10 @@ pagination:
             <h3>Atas kehadiran dan doa restu dari Bapak/Ibu/Saudara/i sekalian kami mengucapkan terima kasih</h3>
             <p>Wassalamualaikum Warahmatullahi Wabarakatuh</p>
             <h3>KAMI YANG BERBAHAGIA</h3>
-            <img alt="Rima Ilman Logo" id="rima-ilham-logo" src="/images/rm/rima-ilham-logo.png"></img>
+            <div id="pihak-keluarga" class="auto-grid region">
+            <div id="kel-flex"><h2>Kel. Bpk. Drs. H. Edi Saputra</h2><h2>Ibu Dra. Hj. Nurbainiir</h2></div>
+            <div id="kel-flex"><h2>Kel. Alm. Drs. Dicky Akhmad Haidir</h2><h2>Ibu Enung Nurani</h2></div>
+            </div>
         </div>
         {# Side Flower Image #}
         {# <div class="flower-frame repel">
