--- a/src/site/content/feeds/daily-blog.njk
+++ b/src/site/content/feeds/daily-blog.njk
@@ -12,9 +12,20 @@ tags:
 <div class="masuk-root region">
 <div class="masuk-home wrapper">
 <header class="masuk-layout-header">
+    <div class="wrapper" id="soset-header">
+    <p>SOSEET BLOG</p>
     <a href="/feeds/daily-blog">
-        <h2>Your fun entertainment journal</h2>
+        <h2>YOUR FUN ENTERTAINMENT JOURNAL</h2>
     </a>
+    </div>
+    <div class="wrapper">
+        <nav id="masuk-nav">
+            <a>DESIGN</a>
+            <a>MUSIC</a>
+            <a>FASHION</a>
+            <a>FEATURED</a>
+        </nav>
+    </div>
 </header>
 <main class="masuk-layout-main edges">
     <div class="sidebar">
@@ -23,9 +34,9 @@ tags:
                 <div class="article-header w-stack">
                 <a href=""><h1 class="article-title">Elizabeth Peyton pursue her online subscriptions. Fansonly in her first choice</h1></a>
                 <p class="article-date">Jan 21, 2022</p>
-                <img class="article-cover" src="/images/feeds/euphoria-cast.webp" />
                 </div>
                 <div class="article-content region">
+                    <img class="article-cover" src="/images/feeds/euphoria-cast.webp" />
                     <p>After two years isolated, Elizabeth opened his first account and in three days, her daily subscribe grow 50%, with around one thousand subscribers</p>
                 </div>
             </div>
@@ -45,7 +56,22 @@ tags:
             </div>
         </div>
         <div class="side-masuk">
-            <div class="w-stack">
+            <div class="side-section w-stack">
+                <h2>ABOUT US</h2>
+                <div id="about-box">
+                </div>
+            </div>
+            <div class="side-section w-stack">
+                <h2>CATEGORY</h2>
+                <ul role="list">
+                    <li>NIHILIST</li>
+                    <li>GLAMOUR</li>
+                    <li>UGLINESS</li>
+                    <li>BEAUTY</li>
+                    <li>SHINY</li>
+                </ul>
+            </div>
+            <div class="side-section w-stack">
                 <h2>Quick Links</h2>
                 <ul role="list">
                     <li>Facebook</li>
