--- a/src/site/content/rimailmanwedding/virtual/index.njk
+++ b/src/site/content/rimailmanwedding/virtual/index.njk
@@ -192,8 +192,12 @@ pageScripts:
         </web-carousel>
         <div class="region">
         <h3>KAMI YANG BERBAHAGIA</h3>
+        <div id="pihak-keluarga" class="auto-grid region">
+            <div id="kel-flex"><h2>Kel. Bpk. Drs. H. Edi Saputra</h2><h2>Ibu Dra. Hj. Nurbainir</h2></div>
+            <div id="kel-flex"><h2>Kel. Alm. Drs. Dicky Akhmad Haidir</h2><h2>Ibu Enung Nurani</h2></div>
+            </div>
         </div>
-        <img alt="Rima Ilman Logo" id="rima-ilham-logo" src="/images/rm/rima-ilham-logo.png"></img>
+        
     </div>
 </div>
 </main>
